# token-uncertainty-verifier

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
samples/: sample_comparison_modes.html  sample_contrastive.csv  sample_report.html  sample_sentences.csv  sample_tokens.csv
scripts/: generate_samples.py
tests/: test_chat_mode.py  test_comparison_modes.py  test_examples.py  test_nli_attribution.py  test_rendering.py  test_scoring.py
token_uncertainty/: __init__.py  app_actions.py  app_ui.py  chat_mode.py  chat_rendering.py  comparison_modes.py  examples.py  model_runner.py  nli_attribution.py  rendering.py  scoring.py  types.py
