[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "token-uncertainty-verifier"
version = "0.1.0"
description = "Token uncertainty, diff, and contrastive-likelihood overlays for LLM outputs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
  "hallucination",
  "uncertainty",
  "llm",
  "claim-verification",
  "gradio",
  "huggingface",
]
dependencies = [
  "accelerate>=0.30",
  "huggingface-hub>=1.20,<2.0",
  "gradio==6.19.0",
  "numpy>=1.26",
  "protobuf>=4.25",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
  "torch>=2.2",
  "transformers>=4.46",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://huggingface.co/spaces/sebastianboehler/token-uncertainty-verifier"
Repository = "https://github.com/SebastianBoehler/token-uncertainty-verifier"
Issues = "https://github.com/SebastianBoehler/token-uncertainty-verifier/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["token_uncertainty*"]
